--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -1,20 +1,38 @@
 ﻿@using ReHouse.Utils.Helpers
 @using System.Globalization;
 @model ReHouse.FrontEnd.Models.LoadAdvertModel
+@*@Styles.Render("~/bundles/fancybox");*@
 
 @section scripts {
     @Scripts.Render("~/bundles/slides");
     <script>
-        $(function () {
-            $('#products').slides({
-                preload: true,
-                preloadImage: '',
-                effect: 'slide, fade',
-                crossfade: true,
-                slideSpeed: 200,
-                fadeSpeed: 500,
-                generateNextPrev: true,
-                generatePagination: false
+        //$(function () {
+        //    $('#products').slides({
+        //        preload: true,
+        //        preloadImage: '',
+        //        effect: 'slide, fade',
+        //        crossfade: true,
+        //        slideSpeed: 200,
+        //        fadeSpeed: 500,
+        //        generateNextPrev: true,
+        //        generatePagination: false
+        //    });
+        //});
+
+        $(document).ready(function ($) {
+            $('#products').sliderPro({
+                width: 960,
+                height: 500,
+                fade: true,
+                arrows: true,
+                buttons: false,
+                fullScreen: true,
+                shuffle: true,
+                smallSize: 500,
+                mediumSize: 1000,
+                largeSize: 3000,
+                thumbnailArrows: true,
+                autoplay: false
             });
         });
     </script>
@@ -35,7 +53,7 @@
                 <a href="/">Главная</a>
                 <pre> </pre>
                 <p>/</p>
-                <pre> </pre>                
+                <pre> </pre>
 
                 @{ string action = "", desc = "", pricePerSquere = ""; }
 
@@ -94,50 +112,40 @@
     </div>
 </div>
 
-
 @if (Model.Advert.Images != null && Model.Advert.Images.Count > 0)
 {
-    int i = 0;
-    int j = 0;
-    int max = !String.IsNullOrEmpty(Model.Advert.YouTubeUrl) ? 2 : 3;
     <span class="noprint">
         <div id="products_example">
             <div id="products">
-                <div class="slides_container">
+                <div class="sp-slides">
                     @foreach (var item in Model.Advert.Images)
-                {
-                    if (i >= max)
                     {
-                        break;
-                    }
-                    i++;
-                        <a><img src="@Url.Content(item.Url + item.FileName)?w=767&h=600&mode=max" width="767" height="600" title="@item.Title" alt="@item.Alt"></a>
-                    }
-                    @if (!String.IsNullOrEmpty(Model.Advert.YouTubeUrl))
-                    {
-                        <a><iframe width="767" height="600" src="https://www.youtube.com/embed/@Model.Advert.YouTubeUrl" fram frameborder="0" allowfullscreen></iframe></a>
+                        <div class="sp-slide">
+                            @*<img class="sp-image" src="@Url.Content(item.Url + item.FileName)?w=767&h=600&mode=max"
+                                data-src="@Url.Content(item.Url + item.FileName)?w=767&h=600&mode=max" />*@
+                            <img class="sp-image" src="/Content/images/adverts/images/253_131371478043202070.jpg?w=767&h=600&mode=max"
+                                 data-src="/Content/images/adverts/images/253_131371478043202070.jpg?w=767&h=600&mode=max" />
+                        </div>
+                        <div class="sp-slide">
+
+                            <img class="sp-image" src="/Content/images/adverts/images/img_1514_131350239275052451_131371146148607426.jpg?w=767&h=600&mode=max"
+                                 data-src="/Content/images/adverts/images/img_1514_131350239275052451_131371146148607426.jpg?w=767&h=600&mode=max" />
+                        </div>
+                        <div class="sp-slide">
+
+                            <img class="sp-image" src="/Content/images/adverts/images/img_1526_131350239286771210_131371146158918819.jpg?w=767&h=600&mode=max"
+                                 data-src="/Content/images/adverts/images/img_1526_131350239286771210_131371146158918819.jpg?w=767&h=600&mode=max" />
+                        </div>
                     }
                 </div>
-                <ul class="pagination">
-
+                <div class="sp-thumbnails">
                     @foreach (var item in Model.Advert.Images)
-                {
-                    if (j >= max)
                     {
-                        break;
+                        <img class="sp-thumbnail" src="~/Content/images/adverts/images/253_131371478043202070.jpg?w=150&h=150&mode=max" />
+                        <img class="sp-thumbnail" src="~/Content/images/adverts/images/img_1514_131350239275052451_131371146148607426.jpg?w=150&h=150&mode=max" />
+                        <img class="sp-thumbnail" src="~/Content/images/adverts/images/img_1526_131350239286771210_131371146158918819.jpg?w=150&h=150&mode=max" />
                     }
-                    j++;
-                        <li><a href="#"><img src="@Url.Content(item.Url + item.FileName)?w=244&h=188&mode=max" title="@item.Title" alt="@item.Alt"></a></li>
-                    }
-                    @if (!String.IsNullOrEmpty(Model.Advert.YouTubeUrl))
-                    {
-                        <li>
-                            <a href="#">
-                                <iframe width="244" height="188" src="https://www.youtube.com/embed/@Model.Advert.YouTubeUrl" frameborder="0" allowfullscreen></iframe>
-                            </a>
-                        </li>
-                    }
-                </ul>
+                </div>
             </div>
         </div>
     </span>
